--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="wrapper">
     <div class="calculator">
-        <div class="input" id="input"></div>
+        <div class="input" id="input">0</div>
         <div class="buttons">
             <div class="operators">
                 <div>+</div>
